--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.1",
-    "react-use-measure": "^2.1.1"
+    "react-markdown": "^8.0.7",
+    "react-use-measure": "^2.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
