--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.3",
     "@headlessui/react": "^1.7.7",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.13",
+    "@kinde-oss/kinde-auth-nextjs": "^1.8.22",
     "@tailwindcss/forms": "^0.5.3",
     "@vercel/analytics": "^0.1.8",
     "ai": "^2.1.21",
